# Graphing-Calculator

./: CMakeLists.txt  FONT_INSTRUCTIONS_FOR_WINDOWS.txt
Graphing/: Graphing.pro  animate  animate.cpp  animate.h  constants.h  description.h  graph_info.cpp  graph_info.h  main.cpp  plot.cpp  plot.h  random.cpp  random.h  sidebar.cpp  sidebar.h  system.cpp  system.h
Graphing/Animate.app/Contents/: Info.plist
Graphing/Animate.app/Contents/MacOS/: Animate
Shunting_Yard/15_07_RPN_Shunting_Yard/: 15_07_RPN_Shunting_Yard.pro  function.cpp  function.h  integer_number.cpp  integer_number.h  left_p.cpp  left_p.h  main.cpp  operator.cpp  operator.h  right_p.cpp  right_p.h  rpn.cpp  rpn.h  shunting_yard.cpp  shunting_yard.h  token.cpp  token.h  tokenize.cpp  tokenize.h  variable.cpp  variable.h  z.output.h  z_work_report.h
build-Graphing-Desktop_Qt_5_12_1_clang_64bit-Debug/: Graphing  Makefile  functions.txt
build-Graphing-Desktop_Qt_5_14_2_clang_64bit-Debug/: Graphing  Makefile  functions.txt
build-Graphing-Qt_6_3_0_for_macOS-Debug/: Makefile
build-Graphing-Qt_6_3_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-Graphing-Qt_6_3_0_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: Availability.h.2ED23327A8C5DAB4.idx  __bit_reference.6EE9F7A4C5F9FA0D.idx  __config.ADFF5091036E9517.idx  __debug.7F657E97FEDCB83A.idx  (+105 more)
where_is_my_working_folder/Where_is_my_working_folder/: main.cpp
where_is_my_working_folder/build-Where_is_my_working_folder-Desktop_Qt_5_8_0_clang_64bit-Debug/: Makefile  Where_is_my_working_folder  here_is_my_working_folder.txt
